--- a/dogs_vs_cats-Copy1.ipynb
+++ b/dogs_vs_cats-Copy1.ipynb
@@ -1263,6 +1263,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### some valzotion"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
