--- a/fmnist.ipynb
+++ b/fmnist.ipynb
@@ -937,30 +937,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Asaf Yekutiel\\anaconda3\\lib\\site-packages\\xgboost\\sklearn.py:888: UserWarning: The use of label encoder in XGBClassifier is deprecated and will be removed in a future release. To remove this warning, do the following: 1) Pass option use_label_encoder=False when constructing XGBClassifier object; and 2) Encode your labels (y) as integers starting with 0, i.e. 0, 1, 2, ..., [num_class - 1].\n",
-      "  warnings.warn(label_encoder_deprecation_msg, UserWarning)\n"
+      "C:\\Users\\Asaf Yekutiel\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:762: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[20:13:08] WARNING: ..\\src\\learner.cc:541: \n",
-      "Parameters: { cv } might not be used.\n",
-      "\n",
-      "  This may not be accurate due to some parameters are only used in language bindings but\n",
-      "  passed down to XGBoost core.  Or some parameters are not used but slip through this\n",
-      "  verification. Please open an issue if you find above cases.\n",
-      "\n",
-      "\n",
-      "[20:13:12] WARNING: ..\\src\\learner.cc:1061: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'multi:softprob' was changed from 'merror' to 'mlogloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n"
+      "Model performance for Training set\n",
+      "- Accuracy: 1.0\n",
+      "- MCC: 1.0\n",
+      "- F1 score: 1.0\n",
+      "----------------------------------\n",
+      "Model performance for Test set\n",
+      "- Accuracy: 0.8855\n",
+      "- MCC: 0.8728002162206493\n",
+      "- F1 score: 0.8851328954557809\n"
      ]
     }
    ],
@@ -973,7 +979,7 @@
     "\n",
     "# Build stack model\n",
     "stack_model = StackingClassifier(\n",
-    "    estimators=estimator_list, final_estimator=LogisticRegression(),cv =5\n",
+    "    estimators=estimator_list, final_estimator=LogisticRegression(),cv =5,n_jobs=-1,verbose=3\n",
     ")\n",
     "stack_model.fit(X_train_pca, y_train)\n",
     "\n",
@@ -1024,38 +1030,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "XGBoost Algo Result :  0.8823\n"
+      "stack score: 88.59\n"
      ]
     }
    ],
    "source": [
-    "final_xgb = xgb_reg.predict(X_test_reduced)\n",
-    "print(\"XGBoost Algo Result : \",xgb_reg.score(X_test_reduced,y_testdata))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "stack model Algo Result :  0.8829\n"
-     ]
-    }
-   ],
-   "source": [
-    "final_stack = stack_model.predict(X_test_reduced)\n",
-    "print(\"stack model Algo Result : \",stack_model.score(X_test_reduced,y_testdata))"
+    "final_stack_pred = stack_model.predict(X_test_reduced)\n",
+    "final_stack = accuracy_score(y_testdata , final_stack_pred)*100\n",
+    "print(f'stack score: {final_stack}')"
    ]
   },
   {
